@@ -316,6 +316,7 @@
       <junit showoutput="yes"
              printsummary="withOutAndErr"
              haltonfailure="no"
+             fork="yes" forkMode="once"
              errorProperty="tests.failed" failureProperty="tests.failed">
         <sysproperty key="test.count" value="${test.count}"/>
         <sysproperty key="test.dir" value="${test.java.build.dir}"/>
